--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
   crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script src="node_modules/angular/angular.js"></script>
+<script src="node_modules/howler/dist/howler.js"></script>
 <script src="dist/js/bundle.js"></script>
 </html>
