--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="https://use.fontawesome.com/7da6a3a1aa.js"></script>
 <script src="dist/js/config.js"></script>
 <script src="node_modules/angular/angular.js"></script>
 <script src="dist/js/freesound.js"></script>
