add volume and editing of sounds

--- a/app/app.html
+++ b/app/app.html
@@ -1,3 +1,5 @@
-<h1>The Beat Laboratory</h1>
+<div class="container-fluid topView">
+<h1><i class="fa fa-flask" aria-hidden="true"></i> The Beat Laboratory <i class="fa fa-flask" aria-hidden="true"></i></h1>
 <search></search>
+</div>
 <pads></pads>
